syntax = "proto3";

package security;

import "models/security/security.proto";
import "models/util/uuid.proto";
import "models/position/position_filter.proto";
import "requests/util/operation.proto";

option java_multiple_files = true;
option java_package = "common.request.ledger-models-protos";
option java_outer_classname = "SecurityRequestProtos";

message SecurityRequestProto {
  string object_class = 1;
  string version = 2;

  util.RequestOperationTypeProto operation_type = 10;

  security.SecurityProto create_security_input = 20;
  repeated util.UUIDProto uuids = 21;

  position.PositionFilterProto search_security_input = 22;
}


